# SanskritAI

./: .gitignore  README.md  main.py  pyproject.toml  run_all_tests.py
acquisition/: acquisition_manager.py
ai/: explainer.py  translator.py
amarakosha/: __init__.py
analysis/: grammar.py  karaka.py  morphology.py  padaccheda.py  samasa.py  tokenizer.py
core/: __init__.py  config.py  constants.py  exceptions.py  typing.py  version.py
corpus/: gita.py  puranas.py  vedas.py
docs/: api.md  architecture.md  changelog_v0.3.0.md  coding_standards.md  lexical_layer.md  object_model.md  repository.md  roadmap.md
exporters/: csv_export.py  html_export.py  json_export.py  pdf_export.py
input/: converter.py  detector.py  normalizer.py  reader.py
interfaces/: analyzer.py  dictionary.py  exporter.py  translator.py
lexical/: __init__.py
lexicon/: amarakosha.py  dhatupatha.py  dictionary.py
models/: analysis_result.py  base.py  meaning.py  pipeline_state.py  samasa_analysis.py  sandhi_analysis.py  sentence.py  sloka.py  word.py
pipeline/: __init__.py  pipeline.py  stages.py
registry/: analyzer_registry.py  plugin_registry.py
resources/: work_registry.json
sanskritai.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
schemas/: analysis.json  grammar.json  sloka.json  word.json
scripts/: backup_database.py  build_dictionary.py  import_amarakosha.py  import_puranas.py  rebuild_indexes.py
services/: analysis_service.py  dictionary_service.py  export_service.py  grammar_service.py  lexical_repository.py  lexical_repository_backup.py  normalization_service.py  (+2 more)
(+504 files in other folders)
